# slak

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  slack.py  slak.py  test_slack.py  test_slak.py
tests/: test_slak.py
