[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slak"
version = "0.0.1"
authors = [
  { name="Mosky Liu", email="mosky.tw@gmail.com" },
]
description = "Help you gather information from Slack."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/moskytw/slak"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[project.scripts]
slak = "slak:cli"
