[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "slak"
authors = [{name = "Mosky Liu", email = "mosky.tw@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
# TODO: Should be in more classifiers?
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
  "requests",
  "click",
]

[project.urls]
Home = "https://github.com/moskytw/slak"

[project.scripts]
slak = "slak:cli"
